@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * library(error): fixed errors for lists.  Ulrich Neumerkel.
+
   * MANUAL: Added glossary items to index.  Ulrich Neumerkel.
 
   * ENHANCED: Faster implementation of ground/1 using less memory.
